--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
     "babel-preset-env": "^1.6.1",
     "babel-preset-react": "^6.24.1",
     "parcel-bundler": "^1.2.0"
+  },
+  "scripts": {
+    "start": "parcel src/index.html"
   }
 }
