--- a/package.json
+++ b/package.json
@@ -7,17 +7,7 @@
   "author": "Roadagain <ringoh72@gmail.com>",
   "license": "MIT",
   "private": false,
-  "dependencies": {
-    "react": "^16.2.0",
-    "react-bootstrap": "^0.31.5",
-    "react-dom": "^16.2.0"
-  },
-  "devDependencies": {
-    "babel-preset-env": "^1.6.1",
-    "babel-preset-react": "^6.24.1",
-    "parcel-bundler": "^1.2.0"
-  },
-  "scripts": {
-    "start": "parcel src/index.html"
-  }
+  "dependencies": {},
+  "devDependencies": {},
+  "scripts": {}
 }
