--- a/package.json
+++ b/package.json
@@ -7,7 +7,17 @@
   "author": "Roadagain <ringoh72@gmail.com>",
   "license": "MIT",
   "private": false,
-  "dependencies": {},
-  "devDependencies": {},
-  "scripts": {}
+  "dependencies": {
+    "react": "^16.4.1",
+    "react-dom": "^16.4.1"
+  },
+  "devDependencies": {
+    "babel-preset-env": "^1.7.0",
+    "babel-preset-react": "^6.24.1",
+    "parcel-bundler": "^1.9.7"
+  },
+  "scripts": {
+    "build": "parcel build --public-url ./ src/index.html",
+    "start": "parcel src/index.html"
+  }
 }
