--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
   "devDependencies": {
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
+    "gh-pages": "^1.2.0",
     "parcel-bundler": "^1.9.7"
   },
   "scripts": {
     "build": "parcel build --public-url ./ src/index.html",
-    "start": "parcel src/index.html"
+    "start": "parcel src/index.html",
+    "deploy": "gh-pages -d dist"
   }
 }
