deployに使うdockerイメージ指定し忘れてた

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -18,6 +18,8 @@ jobs:
       - run: yarn run build
 
   deploy:
+    docker:
+      - image: circleci/node:7.10
     requires:
       - build
     filters:
