--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -20,12 +20,19 @@ jobs:
   deploy:
     docker:
       - image: circleci/node:7.10
-    requires:
-      - build
-    filters:
-      branches:
-        only: master
     steps:
       - checkout
       - run:
         - yarn run deploy
+
+workflows:
+  version: 2
+  build-and-deploy:
+    jobs:
+      - build:
+      - deploy:
+        requires:
+          - build
+        filters:
+          branches:
+            only: master
