--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -20,6 +20,7 @@ jobs:
   deploy:
     docker:
       - image: circleci/node:7.10
+    working_directory: ~/repo
     steps:
       - checkout
       - run:
