デプロイの実行コマンド1つだけだから1行にまとめる

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -23,8 +23,7 @@ jobs:
     working_directory: ~/repo
     steps:
       - checkout
-      - run:
-        - yarn run deploy
+      - run: yarn run deploy
 
 workflows:
   version: 2
