--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "parcel-bundler": "^1.9.7"
   },
   "scripts": {
-    "build": "parcel build --public-url ./ src/index.html",
+    "build": "parcel build --public-url ./ --no-source-maps src/index.html",
     "start": "parcel src/index.html",
     "deploy": "gh-pages -d dist"
   }
