デプロイ用にSSH設定

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -33,6 +33,12 @@ jobs:
       - attach_workspace:
           at: .
       - run:
+          name: add github to known_hosts
+          command: ssh-keyscan -H github.com >> ~/.ssh/known_hosts
+      - add_ssh_keys:
+          fingerprints:
+            - "16:0f:4c:65:5b:90:c5:ee:8d:d4:de:30:96:de:bf:24"
+      - run:
           name: deploy to github pages
           command: yarn run deploy
 
