--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,4 +1,3 @@
-version: 2
 jobs:
   build:
     docker:
@@ -52,3 +51,6 @@ workflows:
       - deploy:
           requires:
             - build
+        ignore:
+          branches:
+            - gh-pages
