デプロイ時にgitのコンフィグ設定する

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -46,6 +46,11 @@ jobs:
           fingerprints:
             - "16:0f:4c:65:5b:90:c5:ee:8d:d4:de:30:96:de:bf:24"
       - run:
+          name: set configs
+          command: |
+            git config --global user.name $USERNAME
+            git config --global user.name $EMAIL
+      - run:
           name: deploy to github pages
           command: yarn run deploy
 
