--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,9 +2,6 @@ jobs:
   build:
     docker:
       - image: circleci/node:7.10
-    ignore:
-      branches:
-        - gh-pages
     working_directory: ~/repo
     steps:
       - checkout
@@ -30,9 +27,6 @@ jobs:
   deploy:
     docker:
       - image: circleci/node:7.10
-    ignore:
-      branches:
-        - gh-pages
     working_directory: ~/repo
     steps:
       - attach_workspace:
@@ -62,3 +56,6 @@ workflows:
       - deploy:
           requires:
             - build
+      filters:
+        branches:
+          ignore: gh-pages
