--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,9 +3,6 @@ jobs:
     docker:
       - image: circleci/node:7.10
     working_directory: ~/repo
-    branches:
-      ignore:
-        - gh-pages
     steps:
       - checkout
       - restore_cache:
@@ -31,9 +28,6 @@ jobs:
     docker:
       - image: circleci/node:7.10
     working_directory: ~/repo
-    branches:
-      ignore:
-        - gh-pages
     steps:
       - attach_workspace:
           at: .
@@ -56,6 +50,10 @@ jobs:
 
 workflows:
   version: 2
+  triggers:
+    filters:
+      branches:
+        ignore: gh-pages
   build-deploy:
     jobs:
       - build
