指定に従ってnightlyの下にトリガー置く

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -50,10 +50,11 @@ jobs:
 
 workflows:
   version: 2
-  triggers:
-    filters:
-      branches:
-        ignore: gh-pages
+  nightly:
+    triggers:
+      filters:
+        branches:
+          ignore: gh-pages
   build-deploy:
     jobs:
       - build
