--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
     "gh-pages": "^1.2.0",
+    "node-sass": "^4.9.2",
     "parcel-bundler": "^1.9.7"
   },
   "scripts": {
